add transform control

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
 			import * as THREE from 'three';
 			import * as mainControler from './mainControler.js';
-
 			import { RoomEnvironment } from 'three/addons/environments/RoomEnvironment.js';
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
-
 			import { KTX2Loader } from 'three/addons/loaders/KTX2Loader.js';
 			import { MeshoptDecoder } from 'three/addons/libs/meshopt_decoder.module.js';
+			import { TransformControls } from './threejs/examples/jsm/controls/TransformControls.js';
+
 
 			let camera, scene, renderer;
 			let fileSTL, filePTC;
@@ -43,7 +43,7 @@
 
 
 			init();
-
+			mainControler.raycasting();
 			function init() {
 
 				const container = document.createElement( 'div' );
@@ -55,16 +55,13 @@
 				renderer = mainControler.renderer;
 				mainControler.loadSTL("teeth.stl");
 				mainControler.loadPTS("./line.pts");
-                mainControler.initGUI();
+				mainControler.initGUI();
 
-				window.addEventListener( 'resize', mainControler.onWindowResize() );
 				mainControler.render();
-
-				
 			}
 
+			console.log(mainControler.getMeshList());
 
-			console.log(mainControler.getCamera().position);
 
 
 		</script>
